--- a/src/App.css
+++ b/src/App.css
@@ -71,8 +71,7 @@ body {
 
 
 .t {
-  top: 50%;
-  transform: translateY(-50%);
+  top:13px;
 }
 
 
@@ -99,6 +98,9 @@ body {
   bottom: -20px;
 }
 
+.bb{
+  bottom: -30px;
+}
 
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px white inset;
